--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1187,9 +1187,9 @@
                 </a>
                 {% endif %}
 
-                {% if not workspace_info or workspace_info.is_owner or workspace_info.permissions.tiktok_analytics %}
-                <a href="{{ url_for('tiktok_analytics.analytics') }}"
-                   class="nav-subitem {% if request.endpoint and 'tiktok_analytics.' in request.endpoint %}active{% endif %}"
+                {% if not workspace_info or workspace_info.is_owner or workspace_info.permissions.analytics %}
+                <a href="{{ url_for('analytics.index', platform='tiktok') }}"
+                   class="nav-subitem {% if request.endpoint and 'analytics' in request.endpoint and (request.args.get('platform') == 'tiktok' or (not request.args.get('platform') and current_platform == 'tiktok')) %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
                     <i class="ph ph-chart-line"></i>
                     <span>Analytics</span>
